--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "pinia-plugin-persistedstate": "^3.2.1",
+    "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-good-table-next": "^0.2.1",
+    "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
