--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "simple-code-editor": "^2.0.9",
     "vee-validate": "^4.12.6",
     "vue": "^3.2.13",
     "vue-good-table-next": "^0.2.1",
